fix: remove validation exception handling